# HartreeParticleDSL

./: .coveragerc  .gitignore  .gitmodules  LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: python-package.yml
docs/: HartreeParticleDSL.IO_modules.HDF5_IO.rst  HartreeParticleDSL.IO_modules.PHDF5.rst  HartreeParticleDSL.IO_modules.PHDF5_IO.rst  HartreeParticleDSL.IO_modules.base_IO_module.rst  HartreeParticleDSL.IO_modules.random_IO.rst  HartreeParticleDSL.IO_modules.rst  HartreeParticleDSL.Particle_IR.nodes.rst  HartreeParticleDSL.Particle_IR.rst  HartreeParticleDSL.backends.AST_to_Particle_IR.rst  HartreeParticleDSL.backends.C_AOS.rst  HartreeParticleDSL.backends.Cabana_PIR_backend.rst  HartreeParticleDSL.backends.Cabana_backend.rst  HartreeParticleDSL.backends.FDPS_backend.rst  HartreeParticleDSL.backends.base_backend.rst  HartreeParticleDSL.backends.rst  HartreeParticleDSL.coupled_systems.FDTD.rst  HartreeParticleDSL.coupled_systems.FDTD_Kokkos.rst  HartreeParticleDSL.coupled_systems.FDTD_MPI_Kokkos.rst  HartreeParticleDSL.coupled_systems.base_coupler.rst  HartreeParticleDSL.coupled_systems.generic_force_solver.rst  HartreeParticleDSL.coupled_systems.rst  HartreeParticleDSL.inbuilt_kernels.rst  HartreeParticleDSL.kernel_types.rst  HartreeParticleDSL.language_utils.rst  HartreeParticleDSL.rst  Particle_IR.datatypes.rst  Particle_IR.rst  Particle_IR.symbols.rst  conf.py  getting_started.rst  index.rst  internals.rst  modules.rst
examples/: ast_test.py  fdps_example.py
examples/01_basic_examples/: basic_main_kernel.py  config_definition.py  (+1 more)
(+211 files in other folders)
