[metadata]
name = HartreeParticleDSL
version = 0.0.1a
author = Aidan Chalk
description = A Generic Particle DSL supporting a variety of backends
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NYI
project_urls =
    Bug Tracer = https://github.com/NYI/issues
classifiers =
    Programming Language :: Python :: 3
    Licence :: OSI Approved :: TBD
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
